--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
   <p><a href="homework1/index.html">HOMEWORK1</a></p>
+  <p><a href="homework2/index.html">HOMEWORK2</a></p>
   </body>
 </html>
